Fix to notification icon spacing on firefox

--- a/client/main/notifications.css
+++ b/client/main/notifications.css
@@ -42,25 +42,26 @@
 }
 
 [data-type='info'] .jmv-notification-icon {
-    mask: url('../assets/action-info.svg') 0 0/50px 50px no-repeat;
-    background-color: #81B2F5;
+    /* these masks don't work properly in ff, but the -webkit-mask-image does work ... */
+    /*mask: url('../assets/action-info.svg') 0 0/50px 50px no-repeat;*/
     -webkit-mask-image: url('../assets/action-info.svg');
+    background-color: #81B2F5;
 }
 
 [data-type='error'] .jmv-notification-icon {
-    mask: url('../assets/action-error.svg') 0 0/50px 50px no-repeat;
-    background-color: #ce3d3d;
+    /*mask: url('../assets/action-error.svg') 0 0/50px 50px no-repeat;*/
     -webkit-mask-image: url('../assets/action-error.svg');
+    background-color: #ce3d3d;
 }
 
 [data-type='warning'] .jmv-notification-icon {
-    mask: url('../assets/action-warning.svg') 0 0/50px 50px no-repeat;
+    /*mask: url('../assets/action-warning.svg') 0 0/50px 50px no-repeat;*/
     background-color: #FFA500;
     -webkit-mask-image: url('../assets/action-warning.svg');
 }
 
 [data-type='success'] .jmv-notification-icon {
-    mask: url('../assets/action-check.svg') 0 0/50px 50px no-repeat;
+    /*mask: url('../assets/action-check.svg') 0 0/50px 50px no-repeat;*/
     background-color: #399b3f;
     -webkit-mask-image: url('../assets/action-check.svg');
 }
